<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/music_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/musicTitleTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/musicTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/music_list"
        app:layout_constraintBottom_toTopOf="@id/reverse10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/reverse10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reverse_10"
        app:layout_constraintBottom_toTopOf="@id/prev"
        app:layout_constraintEnd_toStartOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/musicTitleTV" />

    <Button
        android:id="@+id/forward10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forward_10"
        app:layout_constraintBottom_toTopOf="@id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/seekBar"
        app:layout_constraintTop_toBottomOf="@id/musicTitleTV" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/playPause"
        app:layout_constraintEnd_toStartOf="@+id/forward10"
        app:layout_constraintStart_toEndOf="@+id/reverse10"
        app:layout_constraintTop_toBottomOf="@+id/musicTitleTV"
        app:layout_constraintVertical_bias="0.49" />

    <Button
        android:id="@+id/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev_track"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reverse10"
        app:layout_constraintEnd_toStartOf="@id/playPause"/>

    <Button
        android:id="@+id/playPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/prev"
        app:layout_constraintTop_toBottomOf="@id/reverse10"
        app:layout_constraintEnd_toStartOf="@id/stop"/>

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/playPause"
        app:layout_constraintTop_toBottomOf="@id/reverse10"
        app:layout_constraintEnd_toStartOf="@id/next"/>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_track"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/stop"
        app:layout_constraintTop_toBottomOf="@id/forward10"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>